// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csharp snapshot 1`] = `
Object {
  "constants": Array [],
  "displayName": "AuthorizationToken",
  "docs": Object {
    "see": "https://docs.aws.amazon.com/AmazonECR/latest/userguide/registry_auth.html",
    "summary": "Authorization token to access private ECR repositories in the current environment via Docker CLI.",
  },
  "fqn": "Amazon.CDK.AWS.ECR.AuthorizationToken",
  "id": "@aws-cdk/aws-ecr.AuthorizationToken",
  "initializer": undefined,
  "instanceMethods": Array [],
  "interfaces": Array [],
  "properties": Array [],
  "staticMethods": Array [
    Object {
      "displayName": "GrantRead",
      "docs": Object {
        "summary": "Grant access to retrieve an authorization token.",
      },
      "fqn": "Amazon.CDK.AWS.ECR.AuthorizationToken.GrantRead",
      "id": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead",
      "parameters": Array [
        Object {
          "default": undefined,
          "displayName": "Grantee",
          "docs": Object {},
          "fqn": "Amazon.CDK.AWS.ECR.AuthorizationToken.parameter.Grantee",
          "id": "@aws-cdk/aws-ecr.AuthorizationToken.parameter.grantee",
          "optional": undefined,
          "type": Object {
            "formattingPattern": "%",
            "types": Array [
              Object {
                "displayName": "IGrantable",
                "fqn": "Amazon.CDK.AWS.IAM.IGrantable",
                "id": "@aws-cdk/aws-iam.IGrantable",
                "packageName": "@aws-cdk/aws-iam",
                "packageVersion": "1.106.0",
                "submodule": undefined,
              },
            ],
          },
        },
      ],
      "usage": "using Amazon.CDK.AWS.ECR;

AuthorizationToken.GrantRead(IGrantable Grantee);",
    },
  ],
}
`;

exports[`csharp snapshot 2`] = `
" AuthorizationToken <a name=\\"AuthorizationToken\\" id=\\"@aws-cdk/aws-ecr.AuthorizationToken\\"></a>

Authorization token to access private ECR repositories in the current environment via Docker CLI.

> https://docs.aws.amazon.com/AmazonECR/latest/userguide/registry_auth.html

> [https://docs.aws.amazon.com/AmazonECR/latest/userguide/registry_auth.html](https://docs.aws.amazon.com/AmazonECR/latest/userguide/registry_auth.html)


# Static Functions <a name=\\"Static Functions\\" id=\\"Static Functions\\"></a>

| **Name** | **Description** |
| --- | --- |
| <code><a href=\\"#@aws-cdk/aws-ecr.AuthorizationToken.grantRead\\">GrantRead</a></code> | Grant access to retrieve an authorization token. |

---

## \`GrantRead\` <a name=\\"GrantRead\\" id=\\"@aws-cdk/aws-ecr.AuthorizationToken.grantRead\\"></a>

\`\`\`csharp
using Amazon.CDK.AWS.ECR;

AuthorizationToken.GrantRead(IGrantable Grantee);
\`\`\`

### \`Grantee\`<sup>Required</sup> <a name=\\"Grantee\\" id=\\"@aws-cdk/aws-ecr.AuthorizationToken.parameter.grantee\\"></a>

- *Type:* Amazon.CDK.AWS.IAM.IGrantable

---


"
`;

exports[`java snapshot 1`] = `
Object {
  "constants": Array [],
  "displayName": "AuthorizationToken",
  "docs": Object {
    "see": "https://docs.aws.amazon.com/AmazonECR/latest/userguide/registry_auth.html",
    "summary": "Authorization token to access private ECR repositories in the current environment via Docker CLI.",
  },
  "fqn": "software.amazon.awscdk.services.ecr.AuthorizationToken",
  "id": "@aws-cdk/aws-ecr.AuthorizationToken",
  "initializer": undefined,
  "instanceMethods": Array [],
  "interfaces": Array [],
  "properties": Array [],
  "staticMethods": Array [
    Object {
      "displayName": "grantRead",
      "docs": Object {
        "summary": "Grant access to retrieve an authorization token.",
      },
      "fqn": "software.amazon.awscdk.services.ecr.AuthorizationToken.grantRead",
      "id": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead",
      "parameters": Array [
        Object {
          "default": undefined,
          "displayName": "grantee",
          "docs": Object {},
          "fqn": "software.amazon.awscdk.services.ecr.AuthorizationToken.parameter.grantee",
          "id": "@aws-cdk/aws-ecr.AuthorizationToken.parameter.grantee",
          "optional": undefined,
          "type": Object {
            "formattingPattern": "%",
            "types": Array [
              Object {
                "displayName": "IGrantable",
                "fqn": "software.amazon.awscdk.services.iam.IGrantable",
                "id": "@aws-cdk/aws-iam.IGrantable",
                "packageName": "@aws-cdk/aws-iam",
                "packageVersion": "1.106.0",
                "submodule": undefined,
              },
            ],
          },
        },
      ],
      "usage": "import software.amazon.awscdk.services.ecr.AuthorizationToken;

AuthorizationToken.grantRead(IGrantable grantee)",
    },
  ],
}
`;

exports[`java snapshot 2`] = `
" AuthorizationToken <a name=\\"AuthorizationToken\\" id=\\"@aws-cdk/aws-ecr.AuthorizationToken\\"></a>

Authorization token to access private ECR repositories in the current environment via Docker CLI.

> https://docs.aws.amazon.com/AmazonECR/latest/userguide/registry_auth.html

> [https://docs.aws.amazon.com/AmazonECR/latest/userguide/registry_auth.html](https://docs.aws.amazon.com/AmazonECR/latest/userguide/registry_auth.html)


# Static Functions <a name=\\"Static Functions\\" id=\\"Static Functions\\"></a>

| **Name** | **Description** |
| --- | --- |
| <code><a href=\\"#@aws-cdk/aws-ecr.AuthorizationToken.grantRead\\">grantRead</a></code> | Grant access to retrieve an authorization token. |

---

## \`grantRead\` <a name=\\"grantRead\\" id=\\"@aws-cdk/aws-ecr.AuthorizationToken.grantRead\\"></a>

\`\`\`java
import software.amazon.awscdk.services.ecr.AuthorizationToken;

AuthorizationToken.grantRead(IGrantable grantee)
\`\`\`

### \`grantee\`<sup>Required</sup> <a name=\\"grantee\\" id=\\"@aws-cdk/aws-ecr.AuthorizationToken.parameter.grantee\\"></a>

- *Type:* software.amazon.awscdk.services.iam.IGrantable

---


"
`;

exports[`python snapshot 1`] = `
Object {
  "constants": Array [],
  "displayName": "AuthorizationToken",
  "docs": Object {
    "see": "https://docs.aws.amazon.com/AmazonECR/latest/userguide/registry_auth.html",
    "summary": "Authorization token to access private ECR repositories in the current environment via Docker CLI.",
  },
  "fqn": "aws_cdk.aws_ecr.AuthorizationToken",
  "id": "@aws-cdk/aws-ecr.AuthorizationToken",
  "initializer": undefined,
  "instanceMethods": Array [],
  "interfaces": Array [],
  "properties": Array [],
  "staticMethods": Array [
    Object {
      "displayName": "grant_read",
      "docs": Object {
        "summary": "Grant access to retrieve an authorization token.",
      },
      "fqn": "aws_cdk.aws_ecr.AuthorizationToken.grant_read",
      "id": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead",
      "parameters": Array [
        Object {
          "default": undefined,
          "displayName": "grantee",
          "docs": Object {},
          "fqn": "aws_cdk.aws_ecr.AuthorizationToken.parameter.grantee",
          "id": "@aws-cdk/aws-ecr.AuthorizationToken.parameter.grantee",
          "optional": undefined,
          "type": Object {
            "formattingPattern": "%",
            "types": Array [
              Object {
                "displayName": "IGrantable",
                "fqn": "aws_cdk.aws_iam.IGrantable",
                "id": "@aws-cdk/aws-iam.IGrantable",
                "packageName": "@aws-cdk/aws-iam",
                "packageVersion": "1.106.0",
                "submodule": undefined,
              },
            ],
          },
        },
      ],
      "usage": "import aws_cdk.aws_ecr

aws_cdk.aws_ecr.AuthorizationToken.grant_read(
  grantee: IGrantable
)",
    },
  ],
}
`;

exports[`python snapshot 2`] = `
" AuthorizationToken <a name=\\"AuthorizationToken\\" id=\\"@aws-cdk/aws-ecr.AuthorizationToken\\"></a>

Authorization token to access private ECR repositories in the current environment via Docker CLI.

> https://docs.aws.amazon.com/AmazonECR/latest/userguide/registry_auth.html

> [https://docs.aws.amazon.com/AmazonECR/latest/userguide/registry_auth.html](https://docs.aws.amazon.com/AmazonECR/latest/userguide/registry_auth.html)


# Static Functions <a name=\\"Static Functions\\" id=\\"Static Functions\\"></a>

| **Name** | **Description** |
| --- | --- |
| <code><a href=\\"#@aws-cdk/aws-ecr.AuthorizationToken.grantRead\\">grant_read</a></code> | Grant access to retrieve an authorization token. |

---

## \`grant_read\` <a name=\\"grant_read\\" id=\\"@aws-cdk/aws-ecr.AuthorizationToken.grantRead\\"></a>

\`\`\`python
import aws_cdk.aws_ecr

aws_cdk.aws_ecr.AuthorizationToken.grant_read(
  grantee: IGrantable
)
\`\`\`

### \`grantee\`<sup>Required</sup> <a name=\\"grantee\\" id=\\"@aws-cdk/aws-ecr.AuthorizationToken.parameter.grantee\\"></a>

- *Type:* aws_cdk.aws_iam.IGrantable

---


"
`;

exports[`typescript snapshot 1`] = `
Object {
  "constants": Array [],
  "displayName": "AuthorizationToken",
  "docs": Object {
    "see": "https://docs.aws.amazon.com/AmazonECR/latest/userguide/registry_auth.html",
    "summary": "Authorization token to access private ECR repositories in the current environment via Docker CLI.",
  },
  "fqn": "@aws-cdk/aws-ecr.AuthorizationToken",
  "id": "@aws-cdk/aws-ecr.AuthorizationToken",
  "initializer": undefined,
  "instanceMethods": Array [],
  "interfaces": Array [],
  "properties": Array [],
  "staticMethods": Array [
    Object {
      "displayName": "grantRead",
      "docs": Object {
        "summary": "Grant access to retrieve an authorization token.",
      },
      "fqn": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead",
      "id": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead",
      "parameters": Array [
        Object {
          "default": undefined,
          "displayName": "grantee",
          "docs": Object {},
          "fqn": "@aws-cdk/aws-ecr.AuthorizationToken.parameter.grantee",
          "id": "@aws-cdk/aws-ecr.AuthorizationToken.parameter.grantee",
          "optional": undefined,
          "type": Object {
            "formattingPattern": "%",
            "types": Array [
              Object {
                "displayName": "IGrantable",
                "fqn": "@aws-cdk/aws-iam.IGrantable",
                "id": "@aws-cdk/aws-iam.IGrantable",
                "packageName": "@aws-cdk/aws-iam",
                "packageVersion": "1.106.0",
                "submodule": undefined,
              },
            ],
          },
        },
      ],
      "usage": "import { AuthorizationToken } from '@aws-cdk/aws-ecr'

AuthorizationToken.grantRead(grantee: IGrantable)",
    },
  ],
}
`;

exports[`typescript snapshot 2`] = `
" AuthorizationToken <a name=\\"AuthorizationToken\\" id=\\"@aws-cdk/aws-ecr.AuthorizationToken\\"></a>

Authorization token to access private ECR repositories in the current environment via Docker CLI.

> https://docs.aws.amazon.com/AmazonECR/latest/userguide/registry_auth.html

> [https://docs.aws.amazon.com/AmazonECR/latest/userguide/registry_auth.html](https://docs.aws.amazon.com/AmazonECR/latest/userguide/registry_auth.html)


# Static Functions <a name=\\"Static Functions\\" id=\\"Static Functions\\"></a>

| **Name** | **Description** |
| --- | --- |
| <code><a href=\\"#@aws-cdk/aws-ecr.AuthorizationToken.grantRead\\">grantRead</a></code> | Grant access to retrieve an authorization token. |

---

## \`grantRead\` <a name=\\"grantRead\\" id=\\"@aws-cdk/aws-ecr.AuthorizationToken.grantRead\\"></a>

\`\`\`typescript
import { AuthorizationToken } from '@aws-cdk/aws-ecr'

AuthorizationToken.grantRead(grantee: IGrantable)
\`\`\`

### \`grantee\`<sup>Required</sup> <a name=\\"grantee\\" id=\\"@aws-cdk/aws-ecr.AuthorizationToken.parameter.grantee\\"></a>

- *Type:* @aws-cdk/aws-iam.IGrantable

---


"
`;
